# CobraEditor

./: .gitmodules  CMakeLists.txt  README.md
src/: main.c
